# clair

./: .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  index.html  log.jsonl  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.gate.config.ts
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/plugins/.claude-plugin/: marketplace.json
.claude/plugins/clair/: README.md
.github/workflows/: ci.yml
benchmark/: README.md  levels.md
benchmark/backlog/: README.md  backlog.md
benchmark/results/: standard-L1-prqueue-armA__2026-06-30T21-38-37-492Z.json  standard-L1-prqueue-armA__2026-06-30T22-35-06-886Z__2026-06-30T22-54-31-518Z.json  standard-L1-resolver-armA__2026-06-30T16-50-27-637Z.json
benchmark/runner/: .gitignore  README.md  agent.ts  ci.ts  gate.ts  loadRun.ts  merge.ts  package.json  pnpm-lock.yaml  prQueue.ts  report.ts  resolve.ts  run.ts  shell.ts  sliceSpec.ts  tsconfig.json  types.ts  workspace.ts
benchmark/runner/__tests__/: agent.test.ts  ci.test.ts  gate.test.ts  merge.test.ts  prQueue.test.ts  report.test.ts  resolve.test.ts  run.test.ts  shell.test.ts  sliceSpec.test.ts  workspace.test.ts
benchmark/runs/: README.md  migration-L2.run.yaml  saturation-L3.run.yaml  standard-L1-prqueue.run.yaml  standard-L1-resolver.run.yaml  standard-L1.run.yaml
crates/clair/: Cargo.toml
crates/clair-core/: Cargo.toml
crates/clair-core/src/: cursor.rs  entry.rs  error.rs  git.rs  hooks.rs  lib.rs  registry.rs  render.rs  store.rs  transcript.rs
crates/clair-harness/: Cargo.toml
crates/clair-harness/src/: dev.rs  injected.rs  lib.rs  world.rs
crates/clair-harness/tests/: agent_loop.rs
crates/clair/src/: cli.rs  cmd.rs  handshake.rs  main.rs  serve.rs
crates/clair/src/cmd/: hook.rs  identity.rs  init.rs  pair.rs  ready.rs  test_observe.rs  with.rs
crates/clair/tests/: bdd.rs  commands.rs  hooks.rs  mcp_serve.rs
crates/clair/tests/features/: impersonation.feature  invariants.feature  pairing.feature
docs/: core-features.md  crazy-pivot-vectors.md  initial-brief-dump.md  product.md  scenarios.md  seed-ideas.md
docs/architecture/: arena-build-environment.md  benchmark-arena-ts.md  benchmark-arena.md  benchmark-report.md  benchmark-scenarios.md  benchmarking.md  data-model.md  emit-redaction.md  security-protocol.md  stats-digest.md  target.md  value-benchmark.md
docs/archive/: LEARNINGS.md  README.md  seed-ideas.md
docs/archive/architecture/: target.md
docs/archive/decisions/: 0004-delivery-pluggable-live-via-watcher.md  (+1 more)
docs/decisions/: 0001-language-rust.md  0002-git-via-shell-out.md  0003-dual-integration-mcp-and-skill.md  0005-identity-alias-with-teams-deferred.md  README.md
docs/research/: disclosure-spectrum.md  landscape.md  proof-of-problem.md  rendezvous-protocol.md
e2e/: larder.spec.ts
gate/: README.md  acceptance.test.ts  helpers.ts  run-gate.sh  setup.ts  upgrades.test.ts
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: init.md  pair.md  ready.md  with.md
plugin/hooks/: hooks.json
prisma/: schema.prisma  seed.ts
scripts/: reset-db.ts
skills/clair/: SKILL.md  clair-hooks.settings.template.json
src/client/: api.ts  main.tsx  routes.tsx
src/server/: app.ts  index.ts  prisma.ts
src/shared/: serialize.ts  types.ts  version.ts
tests/: helpers.ts  setup.ts
tests/e2e/: RUNBOOK.md  run.sh
tests/server/: auth.test.ts  checkouts.test.ts  items.test.ts  serialize.test.ts
(+55 files in other folders)
