[workspace]
resolver = "2"
members = [
    "crates/clair-core",
    "crates/clair",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/clair-dev/clair"

# Shared dependency versions. Member crates opt in with `dep = { workspace = true }`.
# The hello-world skeleton needs none; entries return as the product grows.
[workspace.dependencies]
