[package]
name = "clair-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tier-2 in-process driver (World/Dev) that exercises real clair-core::hooks without Claude."

[dependencies]
clair-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
cucumber = { workspace = true }
